# advent-of-code-2021

./: Cargo.toml
src/: lib.rs  main.rs
src/domain/: day_0.rs  day_1.rs  mod.rs  solution_executor.rs
src/domain/solution_executor/: day_00.rs  day_01.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  mod.rs
src/ports/cli/clap/: days.rs  error.rs  mod.rs  opts.rs  outputs.rs
src/ports/cli/clap/inputs/: bingo_game.rs  cave_connection.rs  comma_separated_list.rs  line_groups.rs  lines.rs  mod.rs  origami_instructions.rs  straight_line.rs  submarine_display_signals.rs
src/ports/cli/structopt/: day_part.rs  days.rs  inputs.rs  mod.rs  opts.rs  outputs.rs
src/ports/cli/structopt/inputs/: bingo_game.rs  direction_and_size.rs  lines.rs  mod.rs  straight_line.rs  submarine_display_signals.rs
tests/challenges/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  helpers.rs  main.rs
