[package]
name = "advent-of-code-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-getters = "0.2"
derive-new = "0.5"
itertools = "0.10"
regex = "1.5"
structopt = "0.3"
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
speculoos = "0.8"
